# data_science_hw2

./: HW2.1.ipynb  HW2.2.ipynb  avg_salaries_by_position.csv  pyproject.toml
.ipynb_checkpoints/: HW2.3-checkpoint.ipynb
